Fixed Transparent Gradient Issue on Safari

--- a/postCSS/dev/mixins/_maxLine.css
+++ b/postCSS/dev/mixins/_maxLine.css
@@ -3,6 +3,6 @@
   height: calc(1em * $line-height * $numbers-of-lines);
   &:after{
     height: calc($line-height)em;
-    background: linear-gradient(to left, transparent, $color 66.6667%);
+    background: linear-gradient(to left, rgba(0, 0, 0, 0), $color 66.6667%);
   }
 }
